--- a/02-experiment-tracking/taxianalysis.ipynb
+++ b/02-experiment-tracking/taxianalysis.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,27 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024/06/10 18:02:39 INFO mlflow.tracking.fluent: Experiment with name 'nyc-taxi-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='mlflow-artifacts:/235990381873781123', creation_time=1718042559014, experiment_id='235990381873781123', last_update_time=1718042559014, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mlflow\n",
     "\n",
@@ -91,12 +73,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df1 = pd.read_parquet(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-01.parquet\")\n",
     "df2 = pd.read_parquet(\"https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 3066766 entries, 0 to 3066765\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column                 Dtype         \n",
+      "---  ------                 -----         \n",
+      " 0   VendorID               int64         \n",
+      " 1   tpep_pickup_datetime   datetime64[us]\n",
+      " 2   tpep_dropoff_datetime  datetime64[us]\n",
+      " 3   passenger_count        float64       \n",
+      " 4   trip_distance          float64       \n",
+      " 5   RatecodeID             float64       \n",
+      " 6   store_and_fwd_flag     object        \n",
+      " 7   PULocationID           int64         \n",
+      " 8   DOLocationID           int64         \n",
+      " 9   payment_type           int64         \n",
+      " 10  fare_amount            float64       \n",
+      " 11  extra                  float64       \n",
+      " 12  mta_tax                float64       \n",
+      " 13  tip_amount             float64       \n",
+      " 14  tolls_amount           float64       \n",
+      " 15  improvement_surcharge  float64       \n",
+      " 16  total_amount           float64       \n",
+      " 17  congestion_surcharge   float64       \n",
+      " 18  airport_fee            float64       \n",
+      "dtypes: datetime64[us](2), float64(12), int64(4), object(1)\n",
+      "memory usage: 444.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['0', '1', '2', '3', '4', '5', '6', '7', '8', '9',\n",
+       "       ...\n",
+       "       '3066756', '3066757', '3066758', '3066759', '3066760', '3066761',\n",
+       "       '3066762', '3066763', '3066764', '3066765'],\n",
+       "      dtype='object', length=3066766)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.index.astype('str')"
    ]
   },
   {
